apps/namespaces/media-server/overseerr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: sctx/overseerr:develop
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5055
          protocol: TCP
        volumeMounts:
        - name: overseerr-data
          mountPath: /app/config
      volumes:
      - name: overseerr-data
        persistentVolumeClaim:
          claimName: overseerr-data-pvc
