apps/namespaces/media-server/overseerr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: overseerr
  type: ClusterIP
