apps/namespaces/media-server/overseerr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
spec:
  rules:
    - host: overseerr.home
      http:
        paths:
          - backend:
              service:
                name: overseerr
                port:
                  number: 80
            path: /
            pathType: Prefix
